tests/errors/comprehensive/E2025_invalid_array_size.ez
/*
 * Error Test: E2025 - invalid-array-size
 * Expected: "expected integer for array size"
 */

do main() {
    temp arr [int, "ten"] = {1, 2, 3}  // String instead of int size
}
